--- a/samples/webclient.html
+++ b/samples/webclient.html
@@ -8,9 +8,9 @@
     <title>FireAjna Web Client</title>
     
     <!-- FOUNDATION -->
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link href="http://mozilla.github.io/foundation-icons/assets/foundation-icons.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.1/dist/css/foundation.min.css">
+    <link href="https://mozilla.github.io/foundation-icons/assets/foundation-icons.css" type="text/css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.1/dist/js/foundation.min.js"></script>
     
     <!-- FIREBASE UI -->
     <script src="../AjnaConnector/AjnaConnector.js"></script>
