--- a/samples/webclient.html
+++ b/samples/webclient.html
@@ -151,7 +151,7 @@
       
       function editModeOn() {
         console.log("editing object " + $('#objectModalObjectId').val());
-        var o = ajna.getObject($('#ObjectId').val());
+        var o = ajna.getObject($('#objectModalObjectId').val());
         console.log(o);
         var d = o.doc.data();
         console.log(d);
