--- a/samples/ar.html
+++ b/samples/ar.html
@@ -3,7 +3,7 @@
   <head>
     <!-- AFRAME -->
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
-    <script src="js/aframe-ar.min.js"></script>
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     <script src="https://rawgit.com/blairmacintyre/aframe-look-at-billboard-component/master/dist/aframe-look-at-billboard-component.min.js"></script>
     <script src="https://unpkg.com/@editvr/aframe-dialog-popup-component@1.7.2/dist/aframe-dialog-popup-component.min.js"></script> 
     <script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/aframe-ui-widgets.min.js"></script>
@@ -245,7 +245,7 @@
     <div style="z-index: 10001;" id="firebaseui-auth-container"></div>
 	
     <!-- AFRAME SCENE -->
-    <a-scene artoolkit device-orientation-permission-ui="enabled: true">
+    <a-scene device-orientation-permission-ui="enabled: true">
       <!-- define your scene as usual -->
       <a-box color="blue" ajna-object position="-5 0 -5">
         <a-text billboard value="Hello, World!" color="#ff0000" position="0 1 0" align="center"></a-text>
