--- a/samples/artest.html
+++ b/samples/artest.html
@@ -22,6 +22,7 @@
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-extras@3.3.0/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
     <script>
       // Define a few custom components useful for AR mode. While these are somewhat reusable,
@@ -75,7 +76,7 @@
   </head>  
   <body>
 
-    <a-scene>
+    <a-scene artoolkit>
       <a-assets timeout="30000">
         <!-- Model source: https://sketchfab.com/3d-models/spinosaurus-2135501583704537907645bf723685e7
              Model author: https://sketchfab.com/VapTor
