changed login button behavior

--- a/samples/ar.html
+++ b/samples/ar.html
@@ -251,8 +251,8 @@
   
 	<!-- LOGIN BUTTONS -->
     <div style="position:absolute; top: 10px; right: 10px; z-index: 10000;">
-      <button onclick='showLoginWindow()' id='loginBtn'>login</button>
-      <button onclick='logout()' id='logoutBtn'>logout</button>
+      <input type="button" value="login" onclick='showLoginWindow()' id='loginBtn'/>
+      <input type="button" value="logout" onclick='logout()' id='logoutBtn'/>
     </div>
     
 	<!-- OBJECT POPUP -->
