improved handling of actions. added possibility to create new actions in-game.

--- a/samples/ar.html
+++ b/samples/ar.html
@@ -286,7 +286,7 @@
     </div>
     
 	<!-- OBJECT POPUP -->
-    <div id="objectModal" class="reveal" style="position:absolute; top: 20px; left:20px; z-index:10001; background: #ffffff; opacity: 0.5;" data-reveal data-overlay="false">
+    <div id="objectModal" class="reveal" style="position:absolute; top: 20px; left:20px; z-index:10001; background: #ffffff; opacity: 0.7; max-height: 80%;" data-reveal data-overlay="false">
       <h2 id="popName">Objectname</h2>
       <p id="popDesc">Description</p>
       <table id="popAct">
