--- a/samples/ar.html
+++ b/samples/ar.html
@@ -4,7 +4,7 @@
     <!-- AFRAME -->
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-extras@3.3.0/dist/aframe-extras.min.js"></script>
-    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/jeromeetienne/AR.js/2.2.2/aframe/build/aframe-ar.js"></script>
     <script src="https://rawgit.com/blairmacintyre/aframe-look-at-billboard-component/master/dist/aframe-look-at-billboard-component.min.js"></script>
     <script src="https://unpkg.com/@editvr/aframe-dialog-popup-component@1.7.2/dist/aframe-dialog-popup-component.min.js"></script> 
     <script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/aframe-ui-widgets.min.js"></script>
@@ -210,7 +210,7 @@
             parameters = $("#a_" + aname + "_val").find(":selected").val();
             break;
           default:
-            parameters = $("#a_" + aname + "_val").text();
+            parameters = $("#a_" + aname + "_val").val();
             break;
         }
         ajna.getObject(id).executeAction(aname, parameters);
