--- a/samples/ar.html
+++ b/samples/ar.html
@@ -175,7 +175,7 @@
           var box = this.el.querySelector('a-box');
           if (box == null) {
             box = document.createElement('a-box');
-            box.setAttribute('color', 'green');
+            box.setAttribute('material', 'color: green; transparent: true; opacity: 0.6');
             box.addEventListener('click', function (evt) {
               var clicked_id = evt.target.parentNode.components["ajna-object"].data;
               populatePopup(clicked_id);
