--- a/samples/ar.html
+++ b/samples/ar.html
@@ -23,6 +23,9 @@
     <!-- TURF -->
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
     
+    <!-- AXIOS -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    
     <!-- FIREBASE -->
     <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-auth.js"></script>
