removed direct elevation calulation options. will be handeled centrally.

--- a/samples/webclient.html
+++ b/samples/webclient.html
@@ -20,6 +20,9 @@
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
     
+    <!-- AXIOS -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    
     <!-- TURF -->
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
 
