--- a/samples/artest.html
+++ b/samples/artest.html
@@ -13,7 +13,7 @@
           alert("ERROR");
         })
         .then(res => {
-          if (typeof res !== "undefined") {
+          if (typeof res != "undefined") {
             console.log(res);
             alert("SUCCESS");
           }
