--- a/samples/artest.html
+++ b/samples/artest.html
@@ -1,30 +1,35 @@
-<html lang="en">
+<html>
   <head>
-    <title>ElevationAPI Test</title>
-    <meta charset="utf-8">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script type="text/javascript">
-      function test() {
-        var url = "https://api.elevationapi.com/api/Model/3d/bbox/7.0,7.05,49.0,49.2";
-        axios.get(url)
-        .catch(err => {
-          console.log(err);
-          alert("ERROR");
-        })
-        .then(res => {
-          if (typeof res != "undefined") {
-            console.log(res);
-            alert("SUCCESS");
-          }
-        });
+    
+      var terrain = document.getElementById("terrain");
+      var width, height = 1000;
+      var segments_x, segments_y = 100;
+      // Create geometry.
+      var geometry = new THREE.PlaneBufferGeometry(width, height, segments_x, segments_y);
+      geometry.rotateX(- Math.PI / 2);
+      var vertices = geometry.attributes.position.array;
+      for (var i = 0, j = 0, l = vertices.length; i < l; i ++, j += 3) {
+        vertices[j + 1] = terrainData[i] * 10;
       }
+
+      // Lower geometry.
+      geometry.translate(
+        0, -1 * (terrainData[worldWidth / 2 + worldDepth / 2* worldWidth] * 10 + 500), 0
+      );
+
+      // Create mesh.
+      var mesh = new THREE.Mesh(geometry);
+      terrain.el.setObject3D('mesh', mesh);
     </script>
   </head>
   <body>
-    Demo CORS Request for ElevationAPI.<br/>
-    See page source and JS console for details.<br/>
-    The requested resource is <a href="https://api.elevationapi.com/api/Model/3d/bbox/7.0,7.05,49.0,49.2" target="_blank">https://api.elevationapi.com/api/Model/3d/bbox/7.0,7.05,49.0,49.2</a><br/>
-    <input type="button" value="test ElevationAPI" onclick="test()"/>
+    <a-scene>
+      <a-entity id="terrain" material="side: double; color: green; wireframe: true"></a-entity>
+      <a-box color="red" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
+
+      <a-sky color="#ECECEC"></a-sky>
+    </a-scene>
   </body>
 </html>
