height map parsing!

--- a/samples/webclient.html
+++ b/samples/webclient.html
@@ -23,6 +23,9 @@
     <!-- AXIOS -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     
+    <!-- getPixels -->
+    <script src="js/getPixels.js"></script>
+    
     <!-- TURF -->
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
 
