added favicon information to html samples

--- a/samples/ar.html
+++ b/samples/ar.html
@@ -1,6 +1,9 @@
 
 <html>
   <head>
+  
+    <link rel="icon" type="image/vnd.microsoft.icon" href="../favicon.ico">
+    
     <!-- AFRAME -->
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-extras@3.3.0/dist/aframe-extras.min.js"></script>
