--- a/samples/webclient.html
+++ b/samples/webclient.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="../favicon.ico">
+    
     <title>FireAjna Web Client</title>
     
     <!-- JQUERY -->
