translated rules to fireward

--- a/samples/webclient.html
+++ b/samples/webclient.html
@@ -44,6 +44,7 @@
         apiKey: "AIzaSyAnRCIFgGZwGGOmjZ7R5juJ4LD34rv86iE",
         authDomain: "fireajna.firebaseapp.com",
         databaseURL: "https://fireajna.firebaseio.com",
+        //databaseURL: "http://localhost:8080",
         projectId: "fireajna",
         storageBucket: "fireajna.appspot.com",
         messagingSenderId: "1041333232578",
