removed unnecessary paging and searching options from datatable

--- a/samples/webclient.html
+++ b/samples/webclient.html
@@ -145,6 +145,8 @@
         
         // setup data table for objects
         objectTable = $('#table_objects').DataTable({
+          paging: false,
+          searching: false,
           columns: [
             { title: "name" },
             { title: "description" },
