--- a/samples/ar.html
+++ b/samples/ar.html
@@ -7,7 +7,7 @@
     <!-- AFRAME -->
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@cd01cec35a01e03eb2d6a9272500a53de31d3828/dist/aframe-master.min.js"></script>
     <script src="https://unpkg.com/aframe-extras@3.3.0/dist/aframe-extras.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js">
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="https://rawgit.com/blairmacintyre/aframe-look-at-billboard-component/master/dist/aframe-look-at-billboard-component.min.js"></script>
     <script src="https://unpkg.com/@editvr/aframe-dialog-popup-component@1.7.2/dist/aframe-dialog-popup-component.min.js"></script> 
     <script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/aframe-ui-widgets.min.js"></script>
@@ -346,7 +346,7 @@
       })
       
       window.addEventListener('markerFound', (error) => {
-          alert('markerFound on window');
+          console.log('markerFound on window');
       })
 
       AFRAME.registerComponent('registerevents', {
@@ -355,13 +355,13 @@
 
           marker.addEventListener('markerFound', function() {
             var markerId = marker.id;
-            alert('markerFound', markerId);
+            console.log('markerFound', markerId);
             // TODO: Add your own code here to react to the marker being found.
           });
 
           marker.addEventListener('markerLost', function() {
             var markerId = marker.id;
-            alert('markerLost', markerId);
+            console.log('markerLost', markerId);
             // TODO: Add your own code here to react to the marker being lost.
           });
         }
@@ -403,20 +403,19 @@
       vr-mode-ui="enabled: false;"
       renderer="logarithmicDepthBuffer: true;"
       embedded
-      arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
+      arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
     >
     <!--<a-scene device-orientation-permission-ui="enabled: true" artoolkit embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960;'>-->
       <!-- define your scene as usual -->
       
       <!--<a-marker type="barcode" value="42" emitevents="true" registerevents>-->
       <a-marker preset="hiro" emitevents="true" registerevents>
-        <a-box color="blue" size="0.1 0.1 0.1" position="0 0 0">
+        <a-box color="blue" size="0.5 0.5 0.5" position="0 0 0">
           <a-text billboard value="Hello, World!" color="#ff0000" position="0 0.1 0" align="center"></a-text>
           <!-- <a-text value="Hello, World!" color="#ff0000" position="0 1 0" align="center" rotation="0 180 0"></a-text> -->
         </a-box>
       </a-marker>
 
-      <!-- define a camera inside the <a-marker-camera> -->
       <a-camera gps-camera rotation-reader>
         <!--<a-cursor></a-cursor>-->
         <a-entity 
