fixed typo in includes

--- a/samples/ar.html
+++ b/samples/ar.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="js/vendor/cv.js"></script> 
     <script type="text/javascript" src="js/vendor/aruco.js"></script> 
     <script type="text/javascript" src="js/vendor/svd.js"></script> 
-    <script type="text/javascript" src="js/vendor/posit.js"></script> 
+    <script type="text/javascript" src="js/vendor/posit2.js"></script> 
     <script type="text/javascript" src="js/markerDetect.js"></script> 
     
     <!-- FIREBASE -->
