renamed markerDetect.js to aruco-detector.js, reflecting the name of the main aframe component

--- a/samples/ar.html
+++ b/samples/ar.html
@@ -12,12 +12,12 @@
     <script src="https://unpkg.com/@editvr/aframe-dialog-popup-component@1.7.2/dist/aframe-dialog-popup-component.min.js"></script> 
     <script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/aframe-ui-widgets.min.js"></script>
 
-    <!-- JS-URICO -->
+    <!-- JS-ARUCO -->
     <script type="text/javascript" src="js/vendor/cv.js"></script> 
     <script type="text/javascript" src="js/vendor/aruco.js"></script> 
     <script type="text/javascript" src="js/vendor/svd.js"></script> 
     <script type="text/javascript" src="js/vendor/posit2.js"></script> 
-    <script type="text/javascript" src="js/markerDetect.js"></script> 
+    <script type="text/javascript" src="js/aruco-detector.js"></script> 
     
     <!-- FIREBASE -->
     <script src="https://www.gstatic.com/firebasejs/6.6.1/firebase-app.js"></script>
